# L0

./: .gitignore  Cargo.toml  README.md  config.toml  docker-compose.yaml
migrations/: 20240829092333_create_table_orders.sql  20240829092351_create_table_deliveries.sql  20240829092357_create_table_items.sql  20240829092404_create_table_payments.sql
src/: lib.rs  main.rs  script.rs  server.rs
src/app/: mod.rs
src/config/: data_saver_config.rs  mod.rs  postgres_config.rs  repositories_config.rs
src/contracts/: mod.rs  models.rs  repositories.rs  saver.rs
src/data_saver/: data_saver.rs  mod.rs
src/domain/: mod.rs  models.rs
src/domain/local_repositories/: in_file_order_presentation_repository.rs  in_memory_order_presentation_repository.rs  mod.rs
src/domain/remote_repositories/: mod.rs  postgres_order_presentation_repository.rs  redis_order_presentation_repository.rs
src/domain/services/: local_order_presentation_remote_services.rs  mod.rs  remote_order_presentation_remote_service.rs
src/errors/: local_repository_error.rs  local_service_error.rs  mod.rs  remote_repository_error.rs  remote_service_error.rs  service_error.rs
src/handlers/: add_order.rs  get_order.rs  get_orders.rs  mod.rs  save_order.rs
src/infrastructure/: mod.rs
src/infrastructure/local_repositories/: file_repository.rs  in_memory_repository.rs  mod.rs
src/infrastructure/remote_repositories/: mod.rs  postgres_order_repository.rs  redis_order_repository.rs
src/infrastructure/services/: mod.rs  order_presentation_local_service.rs  order_presentation_remote_service.rs
src/model/: delivery.rs  item.rs  mod.rs  model.rs  payment.rs  query_params.rs  responses.rs
src/models/: delivery.rs  item.rs  model.rs  payment.rs  responses.rs
src/repo/: mod.rs  postgres.rs  redis.rs  repository.rs
src/state/: state.rs
src/utils/: mod.rs  serde_deserde_date_time.rs  tracing_app.rs
