[package]
name = "L0"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio-postgres = "0.7.11"
serde_json = "1.0.127"



[dependencies.confique]
version="0.2.5"
features=["toml"]


[dependencies.tokio]
version = "1.39.3"
features = ["macros", "rt-multi-thread","signal","time","sync","fs"]

[dependencies.serde]
version="1.0.209"
features=["derive"]

[dependencies.chrono]
version="0.4.38"
features=["serde"]

[dependencies.sqlx]
version="0.8.1"
features=["postgres","runtime-tokio","chrono"] 