[package]
name = "L0"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde_json = "1.0.128"
redis = "0.26.1"
deadpool-redis = "0.16.0"
tracing = "0.1.40"
async-trait = "0.1.82"
tokio-util = "0.7.12"
downcast-rs = "1.2.1"

[dependencies.confique]
version="0.2.5"
features=["toml"]

[dependencies.tokio]
version = "1.40.0"
features = ["macros", "rt-multi-thread","signal","time","sync","fs","macros"]

[dependencies.serde]
version="1.0.209"
features=["derive"]

[dependencies.chrono]
version="0.4.38"
features=["serde"]

[dependencies.sqlx]
version="0.8.2"
features=["postgres","runtime-tokio","chrono"] 

[dependencies.tracing-subscriber]
version="0.3.18"
features=["env-filter"]


[dependencies.tower-http]
version = "0.5.0"
features = ["trace"]

[dependencies.validator]
 version = "0.18.1" 
 features = ["derive"]
